# rust_stuff

./: C  Cargo.toml  README.md
express_testserver/: index.js  package-lock.json  package.json
src/: c.rs  main.rs  notes.rs  primes.rs  rand_nr.rs
