[package]
name = "rust_stuff"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "0.14", features = ["full"] }
json = "0.12.4"
rand = "0.8.5"
reqwest = { version = "0.12.8", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
whoami = "1.4.1"
